name of routes changed and fix wrap agenda

--- a/assets/scss/timetable.scss
+++ b/assets/scss/timetable.scss
@@ -1,5 +1,5 @@
 .card-timetable {
-    width: 220px;
+    width: 230px;
     font-size: 18px;
 }
 
@@ -39,4 +39,8 @@
 
 .join-us-image {
     background-image: url('../images/meeting.jpg');
+}
+
+.addressCard  {
+    white-space: normal;
 }
